2012-06-09  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Pretty print should respect text editor indent setting.
        https://bugs.webkit.org/show_bug.cgi?id=88713

        Reviewed by Pavel Feldman.

        * inspector/front-end/ScriptFormatter.js:

2012-06-09  Dan Bernstein  <mitz@apple.com>

        Fixed the build after r119895.

        * WebCore.xcodeproj/project.pbxproj:

2012-06-09  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: [refactoring] rename TimelineVerticalOverview into TimelineFrameOverview
        https://bugs.webkit.org/show_bug.cgi?id=88708

        Reviewed by Vsevolod Vlasov.

        - rename TimelineVerticalOverview to TimelineFrameOverview;
        - rename associated fields, parameters, CSS classes etc;
        - rename overview mode designators to match the UI;
        - drop unused CSS rules for old-style mode selector;

        * inspector/front-end/TimelineOverviewPane.js:
        (WebInspector.TimelineOverviewPane):
        (WebInspector.TimelineOverviewPane.prototype._showEvents):
        (WebInspector.TimelineOverviewPane.prototype._showFrames):
        (WebInspector.TimelineOverviewPane.prototype._showMemoryGraph):
        (WebInspector.TimelineOverviewPane.prototype._setFrameMode):
        (WebInspector.TimelineOverviewPane.prototype._onCategoryVisibilityChanged):
        (WebInspector.TimelineOverviewPane.prototype._update):
        (WebInspector.TimelineOverviewPane.prototype.addFrame):
        (WebInspector.TimelineOverviewPane.prototype.zoomToFrame):
        (WebInspector.TimelineOverviewPane.prototype._reset):
        (WebInspector.TimelineOverviewPane.prototype._onWindowChanged):
        (WebInspector.TimelineFrameOverview):
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._shouldShowFrames):
        (WebInspector.TimelinePanel.prototype.revealRecordAt):
        * inspector/front-end/timelinePanel.css: